--- a/WebContent/managerportal.xhtml
+++ b/WebContent/managerportal.xhtml
@@ -278,9 +278,9 @@
                      rendered="#{managerBean.isaaoraaa}"
 			>
 				<f:facet name="heading">
-					<h:outputText value="#{profileBean.getCurrentSCAHAHockeySeason().toUpperCase()} TOURNAMENT/EXHIBITION GAMES"/> 
+					<h:outputText value="#{profileBean.getCurrentSCAHAHockeySeason().toUpperCase()} EXHIBITION GAMES"/>
 		        </f:facet> 
-		        <b:commandButton value="Add Tournament/Exhibition Game" iconAwesome="plus"
+		        <b:commandButton value="Add Exhibition Game" iconAwesome="plus"
 		           action="#{managerBean.navigatetoaddgame()}" look="success" style="float: right;">
 			    </b:commandButton>
 				
