--- a/WebContent/editroster.xhtml
+++ b/WebContent/editroster.xhtml
@@ -27,10 +27,10 @@
 			<b:form>
 			<b:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
 			<b:panel id ="panel" collapsible="false" look="primary">
-				<f:facet name="heading">
+				<f:facet name="heading">;
 					<h:outputText value="#{editrosterBean.teamname} Roster" />
 				</f:facet>
-				<div align="right"><b:commandButton value="View Scoresheets" id="viewscoresheet" ajax="true" action="#{editrosterBean.viewScoresheets()}" look="info" rendered="#{profileBean.hasRoleList('S-REG')}"/></div>
+				<div align="right"><b:commandButton value="View Scoresheets" id="viewscoresheet" ajax="true" action="#{editrosterBean.viewScoresheets()}" look="info" rendered="#{profileBean.hasRoleList('S-REG;S-VICE')}"/></div>
 				<!-- this is for the pdr/block recruitment section -->
 				<b:panel id ="pdrpanel" collapsible="true" look="primary">
 					<f:facet name="heading">
@@ -117,7 +117,7 @@
 						<b:inputText id="firstname" value="#{player.firstname}" style="width:60px;font-size: 10px;" rendered="#{profileBean.hasRoleList('S-REG')}">
 
 						</b:inputText>
-						<h:outputText value="#{player.firstname}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG')}"/>
+						<h:outputText value="#{player.firstname}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
 					</b:dataTableColumn>
 					<b:dataTableColumn >
 						<f:facet name="header">
@@ -127,7 +127,7 @@
 						<b:inputText id="lastname" value="#{player.lastname}" style="width:60px;font-size: 10px;" rendered="#{profileBean.hasRoleList('S-REG')}">
 
 						</b:inputText>
-						<h:outputText value="#{player.lastname}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG')}"/>
+						<h:outputText value="#{player.lastname}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
 					</b:dataTableColumn>
 					<b:dataTableColumn >
 			            <f:facet name="header">
@@ -142,7 +142,7 @@
 						<b:inputText id="dob" value="#{player.dob}" style="width:60px;font-size: 10px;" rendered="#{profileBean.hasRoleList('S-REG')}">
 
 						</b:inputText>
-						<h:outputText value="#{player.dob}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG')}"/>
+						<h:outputText value="#{player.dob}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
 					</b:dataTableColumn>
 					<b:dataTableColumn >
 			            <f:facet name="header">
@@ -186,7 +186,7 @@
 							<f:selectItem itemLabel="No" itemValue="N"/>
 							<f:selectItem itemLabel="Yes" itemValue="Y"/>
 						</b:selectOneMenu>
-						<h:outputText value="#{player.getYesno(player.safesportfor18)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG')}"/>
+						<h:outputText value="#{player.getYesno(player.safesportfor18)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
 					</b:dataTableColumn>
 					<b:dataTableColumn >
 						<f:facet name="header">
@@ -198,7 +198,7 @@
 							<f:selectItem itemLabel="Canada" itemValue="CAN"/>
 							<f:selectItem itemLabel="Other" itemValue="OTH"/>
 						</b:selectOneMenu>
-						<h:outputText value="#{player.citizenship}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG')}"/>
+						<h:outputText value="#{player.citizenship}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
 					</b:dataTableColumn>
 					<b:dataTableColumn >
 						<f:facet name="header">
@@ -209,7 +209,7 @@
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 							<f:selectItem itemLabel="No" itemValue="0"/>
 						</b:selectOneMenu>
-						<h:outputText value="#{player.getYesno(player.birthcertificate)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG')}"/>
+						<h:outputText value="#{player.getYesno(player.birthcertificate)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
 					</b:dataTableColumn>
 					<b:dataTableColumn >
 						<f:facet name="header">
@@ -219,13 +219,13 @@
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 							<f:selectItem itemLabel="No" itemValue="0"/>
 						</b:selectOneMenu>
-						<h:outputText value="#{player.getYesno(player.transferindefinite)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG')}"/>
+						<h:outputText value="#{player.getYesno(player.transferindefinite)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
 						<br></br>
 						<b:selectOneMenu id="transferexists" value="#{player.transfer}" style="width:65px;font-size: 10px;" rendered="#{profileBean.hasRoleList('S-REG')}">
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 							<f:selectItem itemLabel="No" itemValue="0"/>
 						</b:selectOneMenu>
-						<h:outputText value="#{player.getYesno(player.transfer)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG')}"/>
+						<h:outputText value="#{player.getYesno(player.transfer)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
 						<br></br>
 						<b:inputText id="expirationdate" value="#{player.expirationdate}" style="width:60px;font-size: 10px;" rendered="#{profileBean.hasRoleList('S-REG')}"/>
 						<h:outputText value="#{player.expirationdate}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG')}"/>
@@ -243,7 +243,7 @@
 							<f:selectItem itemLabel="No" itemValue="0"/>
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
-						<h:outputText value="#{player.getYesno(player.suspended)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG')}"/>
+						<h:outputText value="#{player.getYesno(player.suspended)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
 					</b:dataTableColumn>
 					<b:dataTableColumn >
 						<f:facet name="header">
@@ -257,7 +257,7 @@
 							<f:selectItem itemLabel="No" itemValue="0"/>
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
-						<h:outputText value="#{player.getYesno(player.usaroster)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG')}"/>
+						<h:outputText value="#{player.getYesno(player.usaroster)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
 					</b:dataTableColumn>
 					<b:dataTableColumn >
 			            <f:facet name="header">
