--- a/WebContent/startplayerrelease.xhtml
+++ b/WebContent/startplayerrelease.xhtml
@@ -75,14 +75,6 @@
 				            <f:facet name="header">
 						        Release Options
 						    </f:facet>
-						    <!--<b:commandButton value="Season Free and Clear"
-						                       action="#{playerreleaseBean.startTemporaryRelease(result,'f')}" look="info"
-						                       large-screen="full-width"
-						    					medium-screen="full-width"
-						    					small-screen="full-width"
-						    					tiny-screen="full-width">
-						       <f:ajax execute="@this" render="@form" />
-						    </b:commandButton>-->
 						    <p:spacer width="50" height="10" />
 						    <b:commandButton value="Permanent" 
 						                       action="#{playerreleaseBean.startPermanentRelease(result)}" look="info"
@@ -102,14 +94,14 @@
 						       <f:ajax execute="@this" render="@form" />
 						    </b:commandButton>
 							<p:spacer width="50" height="10" />
-							<b:commandButton value="End of Season Free and Clear"
+							<!--<b:commandButton value="End of Season Free and Clear"
 											 action="#{playerreleaseBean.startTemporaryRelease(result,'eos')}" look="info"
 											 large-screen="full-width"
 											 medium-screen="full-width"
 											 small-screen="full-width"
 											 tiny-screen="full-width">
 								<f:ajax execute="@this" render="@form" />
-							</b:commandButton>
+							</b:commandButton>-->
 				        </b:dataTableColumn> 
 					</b:dataTable>
 					<b:panelGrid colSpans="4,2,2,2,2">
