fixed an issue with roster role being set to 0

--- a/WebContent/editrosterdetail.xhtml
+++ b/WebContent/editrosterdetail.xhtml
@@ -38,7 +38,6 @@
     					small-screen="full-width"
     					tiny-screen="full-width"
     				>
-				    	<f:selectItem itemLabel="Select One" itemValue="0"/>
 				    	<f:selectItem itemLabel="Player" itemValue="Player"/>
 				    	<f:selectItem itemLabel="Assistant Coach" itemValue="Assistant Coach"/>
 				    	<f:selectItem itemLabel="Student Coach" itemValue="Student Coach"/>
@@ -131,11 +130,11 @@
     					small-screen="full-width"
     					tiny-screen="full-width"
 						>
-				    	<f:selectItem itemLabel="Select One" itemValue="0"/>
 				    	<f:selectItem itemLabel="Player" itemValue="Player"/>
 				    	<f:selectItem itemLabel="Assistant Coach" itemValue="Assistant Coach"/>
 				    	<f:selectItem itemLabel="Student Coach" itemValue="Student Coach"/>
 				    	<f:selectItem itemLabel="Head Coach" itemValue="Head Coach"/>
+						 <f:selectItem itemLabel="Assistant Coach/Manager" itemValue="Assistant Coach/Manager"/>
 				    	<f:selectItem itemLabel="Manager" itemValue="Manager"/>
 				    </b:selectOneMenu>
 					<h:outputText value="Active:" />
