--- a/WebContent/registrarviewlois.xhtml
+++ b/WebContent/registrarviewlois.xhtml
@@ -164,6 +164,12 @@
 						    </f:facet>
 							<h:outputText value="#{player.notes}" />    
 				        </b:dataTableColumn>
+						<b:dataTableColumn >
+							<f:facet name="header">
+								<h:outputText value="Bullying" />
+							</f:facet>
+							<h:outputText value="#{player.isbullying}" />
+						</b:dataTableColumn>
 				        <b:dataTableColumn >
 				            <f:facet name="header">
 						        <h:outputText value="Option" />
