--- a/WebContent/registrarcoachlois.xhtml
+++ b/WebContent/registrarcoachlois.xhtml
@@ -159,7 +159,13 @@
 						    </f:facet>
 							<h:outputText value="#{coach.notes}" />    
 				        </b:dataTableColumn>
-				    	<b:dataTableColumn style="font-size: 85%;">
+						<b:dataTableColumn style="font-size: 85%;">
+							<f:facet name="header">
+								Bullying
+							</f:facet>
+							<h:outputText value="#{coach.isbullying}" />
+						</b:dataTableColumn>
+						<b:dataTableColumn style="font-size: 85%;">
 				            <f:facet name="header">
 						        <h:outputText value="Option" />
 						    </f:facet>
