fixed bux in displaying scoresheets for exhibition games

--- a/WebContent/processbullyingwithissues.xhtml
+++ b/WebContent/processbullyingwithissues.xhtml
@@ -97,7 +97,7 @@
 				</b:dataTableColumn>
 				<b:dataTableColumn styleClass="mtrxColumn">
 					<f:facet name="header">
-						Loaded DOB
+						Loaded Team
 					</f:facet>
 					<h:outputText value="#{coach.getCTExpirationdate()}" />
 				</b:dataTableColumn>
