--- a/WebContent/editroster.xhtml
+++ b/WebContent/editroster.xhtml
@@ -263,9 +263,15 @@
 						<f:facet name="header">
 							<h:outputText value="Bullying" style="font-size:10px" />
 						</f:facet>
-						<h:outputText value="#{player.getIsbullying()}" style="font-size:10px"/>
+						<b:selectOneMenu value="#{player.isbullying}"
+										 style="width:60px;font-size: 10px;"
+										 rendered="#{profileBean.hasRoleList('S-REG')}"
+						>
+							<f:selectItem itemLabel="No" itemValue="0"/>
+							<f:selectItem itemLabel="Yes" itemValue="1"/>
+						</b:selectOneMenu>
+						<h:outputText value="#{player.getIsbullying()}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
 					</b:dataTableColumn>
-
 					<b:dataTableColumn >
 			            <f:facet name="header">
 							<h:outputText value="Updated" style="font-size:10px" />
@@ -483,7 +489,14 @@
 						<f:facet name="header">
 							<h:outputText value="Bullying" style="font-size:10px" />
 						</f:facet>
-						<h:outputText value="#{coach.getIsbullying()}" style="font-size:10px"/>
+						<b:selectOneMenu value="#{coach.isbullying}"
+										 style="width:60px;font-size: 10px;"
+										 rendered="#{profileBean.hasRoleList('S-REG')}"
+						>
+							<f:selectItem itemLabel="No" itemValue="0"/>
+							<f:selectItem itemLabel="Yes" itemValue="1"/>
+						</b:selectOneMenu>
+						<h:outputText value="#{coach.getIsbullying()}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
 					</b:dataTableColumn>
 					<b:dataTableColumn orderable="false">
 			            <f:facet name="header">
