--- a/WebContent/quickcoachloiconfirm.xhtml
+++ b/WebContent/quickcoachloiconfirm.xhtml
@@ -188,12 +188,21 @@
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
 					</b:dataTableColumn>
-					<!--<b:dataTableColumn >
+					<b:dataTableColumn >
 						<f:facet name="header">
-							Notes
+							<h:outputText value="ABI" style="font-size:10px" />
 						</f:facet>
-						<h:outputText value="#{coach.getNotes()}" />
-					</b:dataTableColumn>-->
+						<b:selectOneMenu value="#{coach.isbullying}"
+										 large-screen="full-width"
+										 medium-screen="full-width"
+										 small-screen="full-width"
+										 tiny-screen="full-width"
+										 style="width:65px;font-size:10px"
+						>
+							<f:selectItem itemLabel="No" itemValue="0"/>
+							<f:selectItem itemLabel="Yes" itemValue="1"/>
+						</b:selectOneMenu>
+					</b:dataTableColumn>
 					<b:dataTableColumn orderable="false">
 			            <f:facet name="header">
 							<h:outputText value="Option" style="font-size:10px" />
