--- a/WebContent/quickplayerloiconfirmnew.xhtml
+++ b/WebContent/quickplayerloiconfirmnew.xhtml
@@ -199,18 +199,21 @@
 							<h:outputText value="#{player.confirmed}" style="font-size:10px"/>
 						</b:dataTableColumn>
 
-						<!--<b:dataTableColumn >
+						<b:dataTableColumn >
 				            <f:facet name="header">
-						        Notes
+								<h:outputText value="ABI " style="font-size:10px" />
 						    </f:facet>
-				            <b:inputTextarea value="#{player.notes}" rows="2" span="1"
+							<b:selectOneMenu value="#{player.isbullying}"
 											 large-screen="full-width"
 											 medium-screen="full-width"
 											 small-screen="full-width"
 											 tiny-screen="full-width"
-											 style="width:50px;"
-							/>
-				        </b:dataTableColumn> -->
+											 style="width:65px;font-size:10px"
+							>
+								<f:selectItem itemLabel="No" itemValue="0"/>
+								<f:selectItem itemLabel="Yes" itemValue="1"/>
+							</b:selectOneMenu>
+				        </b:dataTableColumn>
 			        	<b:dataTableColumn >
 				            <f:facet name="header">
 						        <h:outputText value="Option" style="font-size:10px" />
