fixed open connection as a part of login process

--- a/WebContent/managegamescoresheet.xhtml
+++ b/WebContent/managegamescoresheet.xhtml
@@ -45,7 +45,7 @@
 				    <!-- window.open('http://localhost:8080/scoresheets/' + filename,'mywindow'); -->
 				    <script>
 				    	function openscoresheet(filename){
-							window.open('http://scaha.com/scoresheets/' + filename,'mywindow');
+							window.open('/scoresheets/' + filename,'mywindow');
 						}
 					</script>
 					<b:dataTable 
