--- a/WebContent/playoffscentral.xhtml
+++ b/WebContent/playoffscentral.xhtml
@@ -59,6 +59,10 @@
 			      	</b:column>
 				</b:row>
 				<b:row>
+					<h:outputText style="font-size:10pt;font-weight: bold;" value="Note:"/>
+					<h:outputText style="font-size:10pt;" value=" SCAHA reserves the right to change the schedule at any time."/>
+				</b:row>
+				<b:row>
 					<b:column span="12">
 						<b:panelGrid colSpans="3,3,3,3" id="playoffgrid" style="padding: 5;" >
 							<!-- <b:selectOneMenu value="#{playoffsBean.selectedseasonid}" onchange="ajax:playoffsBean.loadDivisions()" update="@form"
