added ability for associate registrars to see delinquency list and release

--- a/WebContent/confirmrelease.xhtml
+++ b/WebContent/confirmrelease.xhtml
@@ -133,6 +133,7 @@
 											 medium-screen="full-width"
 											 small-screen="full-width"
 											 tiny-screen="full-width"
+											 rendered="#{profileBean.hasRoleList('S-REG')}"
 							>
 								<f:ajax execute="@this" render="@form" />
 							</b:commandButton>
